@@ -1,0 +1,63 @@
+/**************************************************************************
+ FreeSockets - Portable C++ classes for IP(sockets) applications. (v0.3)
+ Copyright (C) 2000-2001 Rafael Guterres Jeffman
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+**************************************************************************/
+
+#ifndef RGJ_FREE_SOCKET_CONFIG_H_
+#define RGJ_FREE_SOCKET_CONFIG_H_
+
+@SKSTREAM_SOCKET_HEADER@
+@SKSTREAM_STREAMBUF_HEADER@
+@SKSTREAM_TIMEVAL_HEADER@
+
+typedef @SKSTREAM_SOCKLEN_TYPE@ SOCKLEN;
+typedef @SKSTREAM_SOCKET_TYPE@ SOCKET_TYPE;
+
+#if @SKSTREAM_WINDOWS_HEADER_FLAG@
+  // No windows headers required yet.
+#endif
+#if @SKSTREAM_UNIX_HEADER_FLAG@
+  #include <sys/types.h>
+  #include <sys/socket.h>
+  #include <netinet/in.h>
+  #include <arpa/inet.h>
+  #include <unistd.h>
+  #include <netdb.h>
+  #include <errno.h>
+#endif
+#if @SKSTREAM_BEOS_HEADER_FLAG@
+  #include <net/socket.h>
+  #include <net/netdb.h>
+  #include <errno.h>
+#endif
+
+#ifndef INVALID_SOCKET
+#define INVALID_SOCKET (SOCKET_TYPE)(~0)
+#endif // INVALID_SOCKET
+
+#ifndef SOCKET_ERROR
+#define SOCKET_ERROR   -1
+#endif // SOCKET_ERROR
+
+#ifndef INADDR_NONE
+#define INADDR_NONE   0xFFFFFFFF
+#endif // INADDR_NONE
+
+#define SOCKET_BLOCK_ERROR @SKSTREAM_BLOCK_ERROR_VAL@
+
+#endif // RGJ_FREE_SOCKET_CONFIG_H_
