@@ -1,0 +1,52 @@
+/**************************************************************************
+ FreeSockets - Portable C++ classes for IP(sockets) applications. (v0.3)
+ Copyright (C) 2000-2001 Rafael Guterres Jeffman
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+**************************************************************************/
+
+#ifndef RGJ_FREE_SOCKET_CONFIG_H_
+#define RGJ_FREE_SOCKET_CONFIG_H_
+
+#include <unistd.h>
+#include <sys/time.h>
+
+typedef socklen_t SOCKLEN;
+typedef int SOCKET_TYPE;
+
+#ifdef _MSC_VER
+#include <streambuf>
+#else
+#include <streambuf.h>
+#endif
+
+#include <winsock.h>
+
+#ifndef INVALID_SOCKET
+#define INVALID_SOCKET (SOCKET_TYPE)(~0)
+#endif // INVALID_SOCKET
+
+#ifndef SOCKET_ERROR
+#define SOCKET_ERROR   -1
+#endif // SOCKET_ERROR
+
+#ifndef INADDR_NONE
+#define INADDR_NONE   0xFFFFFFFF
+#endif // INADDR_NONE
+
+#define SOCKET_BLOCK_ERROR WSAEWOULDBLOCK
+
+#endif // RGJ_FREE_SOCKET_CONFIG_H_
